# guutil

./: .gitignore  CMakeLists.txt
guutil.tester/: main.cpp
guutil/thread/: condition.cpp  condition_impl.cpp  condition_impl.h  mutex.cpp  mutex_impl.cpp  mutex_impl.h  sharedmutex.cpp  sharedmutex_impl.cpp  sharedmutex_impl.h
include/guutil/: dllexport.h  version.h
include/guutil/io/: console.h  file.h
include/guutil/log/: kind.h  logger.h  stringify.h
include/guutil/memory/: memorymanager.h
include/guutil/memory/impl/: buddy.h  memorymanager_impl.h
include/guutil/process/: named_mutex.h
include/guutil/thread/: condition.h  mutex.h  sharedmutex.h
script/: cmake_uninstall.cmake.in  config.cmake.in  version.cpp.in  version.sh
src/app/: main.cpp
src/guutil/: version.cpp
src/guutil/io/: console.cpp  file.cpp
src/guutil/log/: logger.cpp  stringify.cpp  stringify.h
src/guutil/memory/: memorymanager.cpp
src/guutil/memory/impl/: buddy.cpp  buddy.h  memorymanager_impl.cpp  plain.cpp  plain.h
src/guutil/memory/memorymanager_impl/: buddy.cpp  buddy.h
src/guutil/process/: named_mutex.cpp
